@@ -68,6 +68,7 @@ size_t interface1_rom_length 1
 
 int beta_active
 int beta_paged
+int beta_autoboot
 int beta_drive_count
 int beta_custom_rom
 int beta_direction
